--- a/duvbox.css
+++ b/duvbox.css
@@ -87,10 +87,21 @@ div[class^="panels"] > div[class^="container"] {
     background-color: var(--background-secondary);
 }
 
-div[class^="panels"] > div[class^="container"] > div[class^="nameTag"] > * {
+section[class^="panels"] > div[class^="container"] > div[class^="nameTag"] > * {
     color: var(--text-normal);
 }
 
+section[class^="panels"] > div[class^="container"] {
+    background-color: var(--background-secondary);
+}
+
+div.userSettingsAccount-2eMFVR > div > div {
+    background-color: var(--background-primary);
+}
+
+* > div[class^="contents"] {
+    color: var(--text-normal)
+}
 
 div[class^="size14"] {
     color: var(--text-normal);
