--- a/duvbox.css
+++ b/duvbox.css
@@ -21,6 +21,7 @@ code {
     --background-tertiary: #504945;
     --background-accent: #32302f;
     --text-normal: #ebdbb2;
+    --text-spotify: #fbf1c7;
     --text-muted: #bdae93;
     --text-link: #458588;
     --background-floating: #3c3836;
@@ -65,6 +66,21 @@ code {
     width:5px !important;
     border:none !important;
     border-radius: 0px !important;
+}
+
+/* Guild menu (discord forces light theme) */
+div[class*="wrapper"][class*="fixClipping"]{
+    background-color: var(--background-secondary);
+}
+
+/* New Messages Bar */
+div[class*="newMessagesBar"] {
+    background-color: var(--background-secondary);
+}
+
+/* Mentions (channel, user, etc) */
+span[class*="mention"][class*="interactive"] {
+    color: var(--text-link);
 }
 
 div[class^="scrollableContainer"] {
@@ -277,158 +293,38 @@ div[class*="infoBar"] {
     background-color: var(--background-tertiary);
 }
 
-/** Credit to AlexFlipnote#0001 */
+div[class*="body"][class*="scrollerBase"][class*="thin"] {
+    background-color: var(--background-primary);
+}
 
-div[class*="popouts-"] div[class^="row-"] {
-    transition: all 250ms ease;
+/* Fix text colour when Spotify is playing */
+div[class*="topSectionSpotify"] > header > div[class*="headerInfo"] > div[class*="nameTag"] > * {
+    color: var(--text-spotify);
 }
-div[class*="popouts-"] div[class^="row-"][class*="selected-"] {
-    background: var(--background-primary);
-    padding-left: 26px;
+
+/* Fix button colours */
+div[class*="topSectionSpotify"] > header > button[class*="actionButton"] {
+    background-color: var(--background-tertiary);
 }
-div[class*="popouts-"] div[class*="container-"] {
-    background: var(--background-primary);
-}
-div[class*="popouts-"] div[class*="container-"] div[class*="queryContainer-"] {
-    background: var(--background-accent);
-}
-div[class*="popouts-"] div[class*="container-"] span[class*="searchFilter-"] {
-    background-color: var(--background-primary);
-    padding: 0 5px;
-}
-div[class*="popouts-"] div[class*="container-"] span[class*="searchFilter-"] [data-text] {
-    font-weight: bold;
-}
-div[class*="popouts-"] div[class*="container-"] span[class*="searchAnswer-"] {
-    background-color: var(--background-secondary);
-    padding-left: 0;
-}
-div[class*="popouts-"] div[class*="container-"] span[class*="searchAnswer-"] [data-text] {
-    font-weight: lighter;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] {
-    background-color: var(--background-primary);
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="selected-"] {
+
+div[class*="topSectionNormal"] > header > button[class*="actionButton"] {
     background-color: var(--background-secondary);
 }
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="selected-"]::after {
+
+div[class*="topSectionPlaying"] > header > button[class*="actionButton"] {
+    background-color: var(--background-tertiary);
+}
+
+/** Search **/
+div[class*="resultsGroup"] {
     background-color: var(--background-secondary);
 }
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"]::after {
-    background: transparent;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] {
-    background-color: #111;
-    border: 0;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] + div[class*="selected-"] {
-    background-color: var(--background-secondary) !important;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] + div[class*="resultsGroup-"]::before {
-    display: none;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] + div[class*="searchQuery-"] {
-    background-color: var(--background-primary);
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] + div[class*="searchQuery-"] + div[class*="selected-"] {
-    background-color: var(--background-secondary) !important;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] .keybind-shortcut.dim span {
+
+div[class*="resultsGroup"] > div[class*="option"]::after {
     background-color: var(--background-secondary);
-    border: 1px solid var(--background-secondary);
-    box-shadow: inset 0 -4px 0 var(--background-highlight);
-    color: #000;
-}
-div[class*="popouts-"] div[class*="resultsGroup-"] div[class*="option-"] div[class*="searchQuery-"] .keybind-shortcut.dim span:active {
-    box-shadow: inset 0 -2px 0 var(--background-highlight);
+    background: transparent
 }
 
-div[class*="searchResultsWrap-"] {
-    background: var(--background-highlight);
-}
-div[class*="searchResultsWrap-"] div[class*="searchResult-"]::before, div[class*="searchResultsWrap-"] div[class*="searchResult-"]::after {
-    background: transparent;
-}
-div[class*="searchResultsWrap-"] div[class*="searchHeader-"] {
-    background-color: var(--background-highlight);
-}
-div[class*="searchResultsWrap-"] div[class*="scrollerWrap-"] div[class*="scroller-"] {
+div[class*="resultsGroup"] > div[class*="option"]:hover {
     background-color: var(--background-primary);
 }
-div[class*="searchResultsWrap-"] div[class*="searchResult-"] div[class*="avatar"] {
-    margin: 0 20px 20px;
-}
-div[class*="searchResultsWrap-"] div[class*="searchResult-"][class*="expanded-"] {
-    background: var(--background-secondary);
-    border: 0;
-    border-radius: 0;
-}
-div[class*="searchResultsWrap-"] div[class*="searchResult-"][class*="expanded-"] div[class*="searchResultMessage-"][class*="hit-"] {
-    background-color: var(--background-primary);
-    border-bottom: 0;
-    border-top: 0;
-}
-div[class*="searchResultsWrap-"] div[class*="searchResult-"] div[class*="searchResultMessage-"][class*="hit-"] {
-    background-color: var(--background-primary);
-    border: 0;
-    border-radius: 0;
-    box-shadow: none;
-}
-div[class*="searchResultsWrap-"] div[class*="channelSeparator-"] span[class*="channelName-"] {
-    background: var(--background-primary);
-    margin-left: 15px;
-    padding: 8px;
-}
-
-div[class*="searchResultsWrap-"] > div[class*="searchHeader"] {
-    background-color: var(--background-primary);
-}
-
-react-datepicker {
-    background-color: var(--background-primary) !important;
-}
-react-datepicker .react-datepicker__day {
-    background-color: var(--background-secondary) !important;
-    border-color: #000 !important;
-    color: #fff !important;
-}
-react-datepicker .react-datepicker__day.react-datepicker__day--selected:hover, react-datepicker .react-datepicker__day:hover {
-    background-color: #242424 !important;
-    color: #fff !important;
-}
-react-datepicker .react-datepicker__day.react-datepicker__day--selected {
-    background-color: var(--background-secondary) !important;
-}
-react-datepicker .react-datepicker__day.react-datepicker__day--outside-month {
-    background-color: var(--background-highlight) !important;
-    color: var(--background-secondary) !important;
-}
-react-datepicker .react-datepicker__day.react-datepicker__day--disabled:not(.react-datepicker__day--outside-month) {
-    background-color: var(--background-primary) !important;
-    color: #555 !important;
-}
-react-datepicker .react-datepicker__day .react-datepicker__day-name {
-    color: #fff;
-}
-react-datepicker .react-datepicker__current-month, react-datepicker .react-datepicker__day-name {
-    border-color: #fff !important;
-    color: #fff !important;
-}
-react-datepicker .react-datepicker__header {
-    background-color: var(--background-primary) !important;
-}
-react-datepicker .react-datepicker__navigation {
-    border-color: transparent !important;
-    filter: brightness(2);
-}
-.date-picker {
-    background-color: var(--background-primary);
-    border-top: 0;
-}
-.date-picker .hint-value {
-    background-color: var(--background-accent) !important;
-    font-weight: lighter !important;
-}
-
-/* End AlexFlipnote's code */
