--- a/duvbox.css
+++ b/duvbox.css
@@ -394,3 +394,70 @@ div[class*="roleName"] {
 div[class*="pill"] > span[class*="item"] {
     background-color: var(--background-primary)
 }
+
+/** Deleted Messages */
+div[class*="focusLock"] > div[class*="root"] > div[class*="content"] {
+    background-color: var(--background-secondary);
+}
+div[class*="focusLock"] > div[class*="root"] > div[class*="content"] > div[class*="message"] {
+    background-color: var(--background-tertiary);
+}
+
+div[class*="focusLock"] > div[class*="root"] > div[class*="flex"] {
+    background-color: var(--background-secondary);
+}
+
+/** Bot Tags */
+span[class*="botTag"] {
+    background-color: var(--text-link)
+}
+
+/** Discover Guilds */
+div[class*="circleIconButton"][class*="selected"] {
+    background-color: var(--background-secondary);
+}
+
+div[class*="dragRegion"] {
+    background-color: var(--background-secondary);
+}
+
+div[class*="container"] > div[class*="base"] > div[class*="content"] div[class*="scroller"][class*="auto"] {
+    background-color: var(--background-primary);
+}
+
+section[class*="guildListSection"] > div[class*="guildList"] > div[class*="loaded"] > div[class*="card"] {
+    background-color: var(--background-tertiary);
+}
+
+div[class*="searchBox"] {
+    border-color: var(--background-secondary);
+}
+
+div[class*="searchBox"] > div[class*="inputWrapper"] {
+    background-color: var(--background-tertiary);
+    
+}
+
+div[class*="headerContentWrapper"] {
+    background-color: var(--background-primary);
+}
+
+div[class*="headerContentWrapper"] > div[class*="headerContent"] {
+    background-color: var(--background-primary);
+}
+
+div[class*="container"] > div[class*="search"] {
+    border-color: var(--background-primary);
+    color: var(--background-primary);
+}
+
+div[class*="headerContentWrapper"] > div[class*="headerContent"] > * {
+    color: var(--text-normal)
+}
+
+div[class*="categoryItem"][class*="selected"] > div[class*="itemInner"] {
+    background-color: var(--text-link);
+}
+div[class*="categoryItem"][class*="selected"] > div[class*="itemInner"] > * {
+    color: var(--text-normal)
+}
