--- a/duvbox.css
+++ b/duvbox.css
@@ -1,4 +1,4 @@
-//META{"name":"Duvbox","description":"A Discord theme based on Gruvbox, a Vim theme","author":"CircuitRCAY","version":"1.3.0"}*//
+//META{"name":"Duvbox","description":"A Discord theme based on Gruvbox, a Vim theme","author":"CircuitRCAY","version":"1.4.0"}*//
 /**
     Duvbox - adapted for Discord
     
@@ -560,5 +560,10 @@ div[class*="state"] {
 }
 
 div[class*="state"] > span > a[class*="anchor"] {
+    color: var(--text-normal);
+}
+
+/* Tooltip fix */
+div[class*="tooltipContent"] {
     color: var(--text-normal);
 }
