--- a/duvbox.css
+++ b/duvbox.css
@@ -7,7 +7,7 @@
 
 /* Iosevka, codeblock font */
 
-@import url("https://typeof.net/Iosevka/fonts.css");
+@import url("https://cdn.jsdelivr.net/npm/@typopro/web-iosevka@3.7.5/TypoPRO-Iosevka.css");
 
 code {
     font-family: "Iosevka Web", monospace;
